
 SIMIX
 * New function: SIMIX_process_set_function() called by MSG_set_function
 * Change the underlying waiting queue in semaphores so that a process
   can wait on several of them simultaneously (as in waitany).
 * Fix the way to handle tokens in semaphores so that all access patterns
   work: {acquire, acquire_timeout, waitany} / {release, release_forever}.

 SIMDAG
 * Fix a bug in the management of tasks of size 0 in the surf network
   models. This problem was only visible with SIMDAG and you should
   thus disregard results produced with earlier versions if you
   relied on this feature (some tasks were blocked because of this).
 * Fix a bunch of stuff that prevented to use classical models with SIMDAG
   even though your applications were doing only point-to-point
   communications and sequential computations. Now you can really use any
   model you want (of course, if you create real parallel tasks, which are
   not implemented in most models beside ptaskL07, this will abort).
 * Change the way a task is considered as ready. Instead of removing
   dependencies when a task is done, a counter is decreased. This way,
   it is always possible to reach ancestors thanks to the
   SD_taks_get_parents function (even after the end of the simulation.)
 * Change the level of some logs in sd_global from INFO to VERB. The
   corresponding tests are now less verbose
 * Change the return type of SD_Simulate from (SD_task_t*) into
   xbt_dynar_t. This function was in handling a dynar internally and
   converted it into a NULL terminated array for historical reasons.
 * Rename the SD_READY (all dependencies are satisfied and task is
   scheduled) state in SD_RUNNABLE and define a new SD_SCHEDULABLE (all
   dependencies are satisfied) state.
   This prevents a confusion between the notion of "ready to schedule"
   (SD_SCHEDULABLE) used in DAG scheduling and that of "ready to be
   simulated" (SD_RUNNABLE) used by the simulation kernel.