@@ -166,7 +166,6 @@ int main(int argc, char *argv[])
     exit(1);
   }
   res = test_all(argv[1], argv[2]);
-  SIMIX_message_sizes_output("toto.txt");
   MSG_clean();
 
   if (res == MSG_OK)
